B-F Sandbox Full-Backup/src/objects/Offline_Outlet_Visit_Items__c.object
<CustomObject>
    <description>Custom object to support the offline mobilization of outlet visits for the Global CRM project</description>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders (DMS)</description>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottle_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders (DMS)</description>
        <label>Bottle Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottle_Price__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Bottle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Flag__c</fullName>
        <formula>IF( Available__c,1,
IF( Bottle_Price__c &gt; 0,1,
IF( Bottle_Price_Special__c , 1,
IF( Depletions_Last_Month__c &gt; 0, 1,
IF( Depletions_Next_Month__c &gt; 0, 1,
IF( Depletions_This_Month__c &gt; 0, 1,
IF( Double_Price__c &gt; 0, 1,
IF( Double_Price_Special__c,1,
IF( Drink_Price__c &gt; 0, 1,
IF( Drink_Price_Special__c,1,
IF( Facing__c &gt; 0, 1,
IF( NOT(ISPICKVAL(Shelf__c,&quot;&quot;)),1,0
))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depletions_Last_Month_Date__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Depletions Last Month Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depletions_Last_Month__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Depletions Last Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depletions_Next_Month_Date__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Depletions Next Month Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depletions_Next_Month__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Depletions Next Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depletions_This_Month_Date__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Depletions This Month Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depletions_This_Month__c</fullName>
        <label>Depletions This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Double_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders (DMS)</description>
        <label>Double Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Price__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Double Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drink_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders (DMS)</description>
        <label>Drink Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drink_Price__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Drink Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facing__c</fullName>
        <description>Infowelders (DMS)</description>
        <label>Facing</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Off__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Free Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet Cage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>checkout/information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_On__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>BackBar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit_Item_Key__c</fullName>
        <label>Outlet Visit Item Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit__c</fullName>
        <label>Outlet Visit</label>
        <referenceTo>Outlet_Visit__c</referenceTo>
        <relationshipLabel>Offline Outlet Visit Items</relationshipLabel>
        <relationshipName>Offline_Outlet_Visit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf__c</fullName>
        <label>Shelf</label>
        <picklist>
            <picklistValues>
                <fullName>1. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. euro-palette</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Space_Placement__c</fullName>
        <label>Space</label>
        <picklist>
            <picklistValues>
                <fullName>Free Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet Cage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>checkout/information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offline Outlet Visit Item</label>
    <nameField>
        <label>Offline Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offline Outlet Visit Items</pluralLabel>
    <recordTypes>
        <fullName>X1</fullName>
        <active>true</active>
        <description>Record type to facilitate VF page layout 1</description>
        <label>1</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2</fullName>
        <active>true</active>
        <description>Record type to facilitate VF page layout 2</description>
        <label>2</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3</fullName>
        <active>true</active>
        <description>Record type to facilitate VF page layout 3</description>
        <label>3</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>